# Realtime-Game-Server

./: .gitignore  README.md
demo/web-client/: client.js  index.html
examples/ExampleClient/: Program.cs
sdk/: EventArgs.cs  GameServerClient.cs  GameServerSDK.cs  GameServerSDK.csproj  MatchmakingAPI.cs
server/: CMakeLists.txt  ChatSystem.cpp  GameStateManager.cpp  GameStateManager.h  MatchmakingSystem.h  PlayerManager.h  WebSocketServer.cpp  main.cpp
